@@ -47,12 +47,13 @@ namespace OpenRCT2
 
 namespace OpenRCT2::Scripting
 {
-    static constexpr int32_t OPENRCT2_PLUGIN_API_VERSION = 76;
+    static constexpr int32_t OPENRCT2_PLUGIN_API_VERSION = 77;
 
     // Versions marking breaking changes.
     static constexpr int32_t API_VERSION_33_PEEP_DEPRECATION = 33;
     static constexpr int32_t API_VERSION_63_G2_REORDER = 63;
     static constexpr int32_t API_VERSION_68_CUSTOM_ACTION_ARGS = 68;
+    static constexpr int32_t API_VERSION_77_NETWORK_IDS = 77;
 
 #    ifndef DISABLE_NETWORK
     class ScSocketBase;
